Tests/Examples/bad/parse/break.lifp
# (break)


(break)
(true)
(break out of here and there)
